Prevent date-picker from going off-screen

--- a/src/components/recurrences/recurrences.scss
+++ b/src/components/recurrences/recurrences.scss
@@ -39,6 +39,12 @@
   max-width: 84px;
 }
 
+.date-picker-popper {
+    div[class$="triangle"] {
+      left: 80%;
+  }
+}
+
 .remove {
   min-width: 24px;
   max-width: 24px;
